--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
+    "@rails/actioncable": "^7.0.6",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.4.0",
     "esbuild": "^0.18.16",
