--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,6 +22,10 @@ Metrics/MethodLength:
   Exclude:
     - 'app/helpers/application_helper.rb'
 
+Metrics/BlockLength:
+  Exclude:
+    - 'config/routes.rb'
+
 Style/FrozenStringLiteralComment:
   Enabled: false
 
