--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "daisyui": "^3.4.0",
     "esbuild": "^0.18.16",
     "postcss": "^8.4.27",
+    "stimulus-autocomplete": "^3.1.0",
     "tailwindcss": "^3.3.3"
   },
   "scripts": {
